# terative

./: .gitignore  LICENSE  README.md  TODO.md  bindings.ts  clients.html  clientsRenderer.js  electron-builder.json5  index.html  indexRenderer.js  installer-config.json  main.js  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  settings.html  settingsRenderer.js  tailwind.config.js  tsconfig.json
.github/workflows/: build.yml  release.yml
assets/: logo.icns
js/: general-functions.js  localization.js  updates.js
js/pdf-render/: template1.html
js/translation/: fr_FR.js  localization.js
public/: logo.icns
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: db.rs  lib.rs  main.rs  schema.rs
src-tauri/src/domains/clients/: client.rs  commands.rs  events.rs  mod.rs
src-tauri/src/domains/clients/repository/: mod.rs  model.rs  sql_repo.rs
src/components/: Btn.vue
src/composables/: constants.ts
src/layouts/: home.vue
src/pages/: Accounting.vue  Clients.vue  Home.vue  Invoices.vue  Settings.vue  commands.vue  file.vue  index.vue
src/router/: index.ts
src/tauri-api/: clients.ts  settings.ts  taurpc.ts
styles/: prompt-style.css  styles.css  tinymce-style.css
template/: row.html  template1.html
