[package]
name = "terative"
version = "1.0.0"
description = "Starter template for Nuxt 3 and Tauri 2"
authors = [ "Intradeus" ]
license = "MIT"
repository = "https://github.com/intradeus/terative"
edition = "2021"

[lib]
name = "terative_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.0.1"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.0.1"
tauri-plugin-notification = "2.0.1"
tauri-plugin-os = "2.0.1"
tauri-plugin-fs = "2.0.1"
serde_json = "1"
taurpc = "0.3.2"
dirs = "5.0.0"
specta = { version = "=2.0.0-rc.20", features = ["derive", "chrono", "uuid"] }
specta-util = { version = "0.0.7", features = ["export"] }
specta-typescript = "0.0.7"
tokio = { version = "1", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "2.0.0"
libsqlite3-sys = { version = ">=0.17.2, <0.26.0", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }

[dependencies.tauri]
version = "2.0.2"
features = [ "tray-icon" ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
